--- a/portfolio/angular.json
+++ b/portfolio/angular.json
@@ -25,7 +25,9 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [
+              "./node_modules/vanilla-tilt/dist/vanilla-tilt.min.js"
+            ]
           },
           "configurations": {
             "production": {
