--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
+    "vanilla-tilt": "^1.8.1",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
