--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@geometricpanda/angular-tilt": "^0.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
